<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip8"
        android:layout_width="63dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="110dp"
        android:text="@string/eksi"
        android:textAlignment="center"
        android:textColor="@color/koyuTuruncu"
        android:textSize="24sp"
        android:textStyle="bold"
        app:chipBackgroundColor="#FDE4A7"
        app:chipStrokeColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip10"
        app:layout_constraintTop_toBottomOf="@+id/chip5" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:text="@string/l"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="#FFFFFF"
        app:chipStrokeColor="#F1F0F0"
        app:chipSurfaceColor="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/s"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="#FFFFFF"
        app:chipStrokeColor="#F1F0F0"
        app:chipSurfaceColor="#F6F6F6"
        app:layout_constraintEnd_toStartOf="@+id/chip4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/m"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/koyuTuruncu"
        app:chipStrokeColor="#F1F0F0"
        app:chipSurfaceColor="#F6F6F6"
        app:layout_constraintEnd_toStartOf="@+id/chip5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/baslik"
        android:textColor="@color/textBlackColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="33dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:text="A signutare flame-grilled beef patty topped with smoked bacon."
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/aciklama" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="347dp"
        android:layout_height="259dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/hamburger" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip7"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="32dp"
        android:text="@string/artı"
        android:textAlignment="center"
        android:textColor="@color/koyuTuruncu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:chipBackgroundColor="#FDE4A7"
        app:chipStrokeColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/chip10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip10"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/adet"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:chipBackgroundColor="#FFFFFF"
        app:chipStrokeColor="#F1F0F0"
        app:chipSurfaceColor="#F6F6F6"
        app:layout_constraintEnd_toStartOf="@+id/chip8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chip7"
        app:layout_constraintTop_toBottomOf="@+id/chip4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/fiyatAdı"
        android:textColor="@color/textBlackColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:text="@string/fiyat"
        android:textColor="@color/koyuTuruncu"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/koyuTuruncu"
        android:text="@string/siparisver"
        android:textColor="@color/textWhiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip8" />

</androidx.constraintlayout.widget.ConstraintLayout>